# windows-security-log-analyzer

./: README.md  app.py  models.py  presentation.py  pyproject.toml  requirements.txt  sources.py  test_level_filter.py  test_presentation_colors.py
.github/workflows/: publish.yml
demo/: demo_incident.xml
